crates/vize_canon/src/snapshots/vize_canon__sfc_typecheck__tests__type_check_defined_binding.snap
---
source: crates/vize_canon/src/sfc_typecheck.rs
expression: stable_snapshot_result(result)
---
SfcTypeCheckResult {
    diagnostics: [],
    virtual_ts: None,
    error_count: 0,
    warning_count: 0,
    analysis_time_ms: Some(
        0.0,
    ),
}
