crates/vize_canon/src/snapshots/vize_canon__sfc_typecheck__tests__type_check_v_for_destructuring.snap
---
source: crates/vize_canon/src/sfc_typecheck.rs
expression: stable_snapshot_result(result)
---
SfcTypeCheckResult {
    diagnostics: [],
    virtual_ts: Some(
        "/// <reference lib=\"es2022\" />\n/// <reference lib=\"dom\" />\n/// <reference lib=\"dom.iterable\" />\n// ============================================\n// Virtual TypeScript for Vue SFC Type Checking\n// Generated by vize\n// ============================================\n\n// ImportMeta augmentation (reference existing framework types)\n/// <reference types=\"vite/client\" />\ndeclare global {\n  // Extend ImportMeta with Nuxt-specific properties not covered by vite/client\n  interface ImportMeta {\n    readonly client: boolean;\n    readonly server: boolean;\n    readonly dev: boolean;\n    readonly prod: boolean;\n    readonly ssr: boolean;\n  }\n}\n\n// ========== Module Scope (imports) ==========\ntype __EmitShape<T> = T extends (...args: any[]) => any ? T : T extends Record<string, any> ? { [K in keyof T]: T[K] extends (...args: infer A) => any ? A : T[K] extends any[] ? T[K] : any[]; } : Record<string, any[]>;\ntype __EmitArgs<T, K extends keyof T> = T[K] extends any[] ? T[K] : any[];\ntype __EmitFn<T> = __EmitShape<T> extends (...args: any[]) => any ? __EmitShape<T> : (<K extends keyof __EmitShape<T>>(event: K, ...args: __EmitArgs<__EmitShape<T>, K>) => void);\ntype __RuntimePropCtor<T> = T extends readonly (infer U)[] ? __RuntimePropCtor<U> : T extends { type: infer U } ? __RuntimePropCtor<U> : T extends StringConstructor ? string : T extends NumberConstructor ? number : T extends BooleanConstructor ? boolean : T extends ArrayConstructor ? unknown[] : T extends ObjectConstructor ? Record<string, unknown> : T extends DateConstructor ? Date : T extends FunctionConstructor ? (...args: any[]) => any : unknown;\ntype __RuntimePropResolved<T> = T extends { required: true } ? true : T extends { default: any } ? true : false;\ntype __RuntimePropShape<T extends Record<string, any>> = { [K in keyof T]: __RuntimePropResolved<T[K]> extends true ? __RuntimePropCtor<T[K]> : __RuntimePropCtor<T[K]> | undefined; };\ntype __DefaultFactory<T> = (props: any) => T;\ntype __WithDefaultValue<T> = T | __DefaultFactory<T>;\ntype __WithDefaultsArgs<T> = { [K in keyof T]?: __WithDefaultValue<T[K]> };\ntype __WithDefaultsResult<T, D extends __WithDefaultsArgs<T>> = Omit<T, keyof D> & { [K in keyof D & keyof T]-?: T[K] };\ntype __Ref<T> = import('vue').Ref<T>;\ntype __ShallowRef<T> = import('vue').ShallowRef<T>;\nimport { ref } from 'vue'\ninterface Item { id: number; name: string }\n\n// ========== Exported Types ==========\nexport type Props = {};\n\n// ========== Setup Scope ==========\nfunction __setup() {\n  // Compiler macros (only valid in setup scope, not global)\n  function defineProps<_T = unknown>(): _T;\n  function defineProps<const _T extends readonly string[]>(_props: _T): { [K in _T[number]]?: any };\n  function defineProps<const _T extends Record<string, any>>(_props: _T): __RuntimePropShape<_T>;\n  function defineProps(_props?: any) { void _props; return undefined as any; }\n  function defineEmits<_T = unknown>(): __EmitFn<_T>;\n  function defineEmits<const _T extends readonly string[]>(_events: _T): (event: _T[number], ...args: any[]) => void;\n  function defineEmits<const _T extends Record<string, any>>(_events: _T): __EmitFn<_T>;\n  function defineEmits(_events?: any) { void _events; return (() => {}) as any; }\n  function defineExpose<_T = unknown>(_exposed?: _T): void { void _exposed; }\n  function defineModel<_T = unknown>(): __Ref<_T | undefined>;\n  function defineModel<_T = unknown>(_options: any): __Ref<_T>;\n  function defineModel<_T = unknown>(_name: string, _options?: any): __Ref<_T>;\n  function defineModel(_name_or_options?: any, _options?: any) { void _name_or_options; void _options; return undefined as any; }\n  function defineSlots<_T = unknown>(): _T { return undefined as unknown as _T; }\n  function withDefaults<_T, _D extends __WithDefaultsArgs<_T>>(_props: _T, _defaults: _D): __WithDefaultsResult<_T, _D> { void _props; void _defaults; return undefined as unknown as __WithDefaultsResult<_T, _D>; }\n  function useTemplateRef<_T = any>(_key: string): __ShallowRef<_T | null> { void _key; return undefined as unknown as __ShallowRef<_T | null>; }\n  // Mark compiler macros as used\n  void defineProps; void defineEmits; void defineExpose; void defineModel; void defineSlots; void withDefaults; void useTemplateRef;\n\n  // User setup code\n  \n  const items = ref<Item[]>([])\n  \n  // @vize-map: 4261:4299 -> 0:101\n\n  // ========== Template Scope (inherits from setup) ==========\n  // Ref type captures (before template scope shadows them)\n  type __R_items = typeof items;\n  ;(function __template() {\n    // Auto-unwrap Vue refs in template scope\n    type __U<T> = T extends import('vue').Ref<infer V, any> ? V : T;\n    var items: __U<__R_items> = undefined as any;\n    // Vue template context (delegates to ComponentPublicInstance)\n    type __Ctx = import('vue').ComponentPublicInstance;\n    const __ctx = undefined as unknown as __Ctx;\n    const $attrs = __ctx.$attrs;\n    const $slots = __ctx.$slots;\n    const $refs = __ctx.$refs;\n    const $emit = __ctx.$emit;\n    void __ctx; void $attrs; void $slots; void $refs; void $emit;\n\n\n  // v-for scope: { id, name } in items\n  (items).forEach(({ id, name }: typeof items[number]) => {\n    void id;\n    void name;\n    void (id); // VBind\n    // @vize-map: expr -> 189:191\n    void (id); // Interpolation\n    // @vize-map: expr -> 201:203\n    void (name); // Interpolation\n    // @vize-map: expr -> 211:215\n  });\n\n  // Reference setup bindings (used in template/CSS v-bind)\n  void items; void ref;\n  })();\n}\n\n// Invoke setup to verify types\n__setup();\n\nexport type Emits = {};\nexport type Slots = {};\n\n// ========== Default Export ==========\ntype __VizeComponentInstance = {\n  $props: Props;\n  $emit: __EmitFn<Emits>;\n  $slots: Slots;\n};\ndeclare const __vize_component__: new (...args: any[]) => __VizeComponentInstance;\nexport default __vize_component__;\n",
    ),
    error_count: 0,
    warning_count: 0,
    analysis_time_ms: Some(
        0.0,
    ),
}
